--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "ga4-realtime-service",
   "version": "1.0.0",
-  "description": "A microservice to poll GA4 real-time data every 10s and expose it via an API endpoint.",
+  "description": "A microservice to poll GA4 real-time data and expose it via an API endpoint.",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js", 
-    "dev": "ts-node index.ts",
-    "test": "echo \"No tests specified\" && exit 1"
+    "start": "node dist/index.js",
+    "dev": "ts-node index.ts"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "@google-analytics/data": "^4.12.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.10.5",
-    "typescript": "^5.7.3"
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.0.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   }
 }
